updated swagger codegen
